# Copyright (c) 2023, Sean McNamara <smcnam@gmail.com>.
# All code in this repository is disjunctively licensed under [CC-BY-SA 3.0](https://creativecommons.org/licenses/by-sa/3.0/) and [Apache 2.0](https://www.apache.org/licenses/LICENSE-2.0). 
# Direct dependencies such as Rust, Diesel-rs, Hyper and jsonrpsee are licensed under the MIT or 3-clause BSD license, which allow downstream code to have any license.

[package]
name = "encuum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
diesel = { version = "2", features = [ "sqlite"  ]}
diesel_migrations = "2"
serde_json = "1"
serde = "1"
anyhow = "1"
dotenvy = "0"
maplit = "1"
tracing-subscriber = { version = "0", features = ["env-filter"] }
tracing = "0"
jsonrpsee = { git = "https://github.com/allquixotic/jsonrpsee", branch = "http-proxy", features = ["full"] } 
lazy_static = "1"