# Copyright (c) 2023, Sean McNamara <smcnam@gmail.com>.
# All code in this repository is disjunctively licensed under [CC-BY-SA 3.0](https://creativecommons.org/licenses/by-sa/3.0/) and [Apache 2.0](https://www.apache.org/licenses/LICENSE-2.0). 
# Direct dependencies are believed to be under a license which allows downstream code to have these licenses.

[package]
name = "encuum"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = "1"
anyhow = "1"
dotenvy = "0"
maplit = "1"
tracing-subscriber = { version = "0", features = ["env-filter"] }
tracing = "0"
jsonrpsee = { git = "https://github.com/allquixotic/jsonrpsee", branch = "http-proxy", features = ["full"] } 
tower = { version = "0", features = ["full"] }
hyper = { version = "0.14", features = ["client", "http1", "http2", "tcp"] }
tower-http = { version = "0", features = ["full"] }
lazy_static = "1"
regex = "1"
reqwest = "0"
sea-orm = { version = "0", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
futures = "0"
migration = { path = "migration" }
entity = { path = "entity" }
memory-stats = "1"
tokio-cron-scheduler = "0"
secrecy = { version = "0", features = ["serde"] }