[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = "1"
sea-orm = { version = "0", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
futures = "0"
sea-orm-migration = "0"
entity = { path = "../entity" }